[package]
name = "vocrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
terminal_size="0.3.0"
nu-ansi-term = "0.49"
rand = "0.8.5"
clap = { version = "4.5.11", features = ["derive"] }
